изменение src img,icons

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
            <div class="container">
                <div class="row">
                 <div class="col-md-4 offset-md-1">
-                    <a href="" class="subheader_logo"><img src="../icons/subheader/uber.png" alt="logo"></a>
+                    <a href="" class="subheader_logo"><img src="icons/subheader/uber.png" alt="logo"></a>
                     <div class="subheader_text">Официальный партнер Uber в Москве</div>
                 </div>
                 <div class="col-md-3 offset-md-1 col-xl-2 offset-xl-2">
@@ -85,7 +85,7 @@
                 <div class="col-md-6">
                     <div class="advantage_itemright">
                         <div class="advantage_imgright">
-                        <img src="../icons/advantage/purse.png" alt="cash" class="advantage_img"></div>
+                        <img src="icons/advantage/purse.png" alt="cash" class="advantage_img"></div>
                         <div class="advantage_2">
                         <p><span>Никаких наличных, оплата происходит
                             автоматически</span><br>
@@ -93,7 +93,7 @@
                     </div>               
                     <div class="advantage_itemright">
                         <div class="advantage_imgright">
-                        <img src="../icons/advantage/money.png" alt="money" class="advantage_img"></div>
+                        <img src="icons/advantage/money.png" alt="money" class="advantage_img"></div>
                         <div class="advantage_2">
                         <p><span>Высокий доход с гарантированными
                             выплатами</span><br>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="advantage_itemright">
                         <div class="advantage_imgright">
-                        <img src="../icons/advantage/key.png" alt="key" class="advantage_img"></div>
+                        <img src="icons/advantage/key.png" alt="key" class="advantage_img"></div>
                         <div class="advantage_2">
                         <p><span>Комфортное, прозрачное и простое
                             подключение</span><br>
@@ -109,7 +109,7 @@
                     </div>
                     <div class="advantage_itemright">
                         <div class="advantage_imgright">
-                        <img src="../icons/advantage/phone.png" alt="phone" class="advantage_img"></div>
+                        <img src="icons/advantage/phone.png" alt="phone" class="advantage_img"></div>
                         <div class="advantage_2">
                         <p><span>Круглосуточная поддержка</span><br>
                             В Uber действует круглосуточная поддержка водителей по электронной почте. Если что-то непонятно, Вы всегда можете задать вопрос через On-line консультацию.</p></div>
@@ -118,7 +118,7 @@
                 <div class="col-md-6">
                     <div class="advantage_itemright">
                         <div class="advantage_imgright">
-                            <img src="../icons/advantage/board.png" alt=""></div>
+                            <img src="icons/advantage/board.png" alt=""></div>
                             <div class="advantage_2">
                                 <p>
                                     <span>Комиссия 8% + БОНУСЫ</span> <br>
@@ -127,7 +127,7 @@
                     </div>
                     <div class="advantage_itemright">
                         <div class="advantage_imgright">
-                            <img src="../icons/advantage/data.png" alt=""></div>
+                            <img src="icons/advantage/data.png" alt=""></div>
                             <div class="advantage_2">
                                 <p><span>Работа в удобное время, никаких
                                     графиков</span><br>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="advantage_itemright">
                         <div class="advantage_imgright">
-                            <img src="../icons/advantage/maps.png" alt=""></div> 
+                            <img src="icons/advantage/maps.png" alt=""></div> 
                             <div class="advantage_2">
                                 <p><span>Всегда большое количество заказов</span><br>
                                     Приложение показывает, где на данный момент больше всего заказов и где действуют повышенные тарифы. У Вас не будет простоя и холостых пробегов. Наши пассажиры всегда приятные и абсолютно неконфликтные люди, которых приятно возить.</p>
@@ -144,7 +144,7 @@
                     </div>
                     <div class="advantage_itemright">
                         <div class="advantage_imgright">
-                            <img src="../icons/advantage/car.png" alt=""></div>
+                            <img src="icons/advantage/car.png" alt=""></div>
                             <div class="advantage_2">
                                 <p><span>Без шашечек и наклеек</span><br>
                                     Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и обклеивать его наклейками.</p>
@@ -211,7 +211,7 @@
             <div class="label label_white">возможности</div>
             <h2 class="title title_white">Выбор - отличная штука!</h2>
             <div class="subtitle subtitle_white">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
-            <img class="opportunities_img" src="../img/opportunities/uber_x.png" alt="car">
+            <img class="opportunities_img" src="img/opportunities/uber_x.png" alt="car">
             <div class="opportunities_footer">Машины на каждый день.<br>
                 Лучше, быстрее и дешевле, чем такси</div>
         </div>
